--- a/_posts/2020-02-14-22.md
+++ b/_posts/2020-02-14-22.md
@@ -4,27 +4,27 @@ title: '#22 Observability - Distributed tracing'
 date: 2020-02-14 08:00:00 +0200
 description: Distributed tracing, czyli jeden z trzech filar observability
 img: 22.png
-tag**S:** 
+tags:
 spreaker: 22745792
 ---
 Distributed tracing, czyli ostatni filar observability. Niektórzy uważają to za crème de la crème całego **observability**.
 
-[UserVoice](http**S:**//github.com/patoarchitekci/uservoice/issues)
+[UserVoice](https://github.com/patoarchitekci/uservoice/issues)
 
 Ciekawe linki i inne znaleziska z tego odcinka:
 
-- [The Architecture of a Large-Scale Web Search Engine, circa 2019](http**S:**//www.0x65.dev/blog/2019-12-14/the-architecture-of-a-large-scale-web-search-engine-circa-2019.html)
-- [#kubecon EU schedule and the program chairs selected very few Istio and Knative related talks](http**S:**//twitter.com/mattklein123/status/1222740823843856384)
-- [Understanding Observability](http**S:**//sdarchitect.blog/2020/01/08/understanding-observability/)
-- [OpenTracing](http**S:**//opentracing.io/)
-- [OpenCensus](http**S:**//opencensus.io/)
-- [OpenTelemetry](http**S:**//opentelemetry.io/)
-- [Dapper, a Large-Scale Distributed Systems Tracing Infrastructure](http**S:**//research.google/pubs/pub36356/)
-- [Zipkin](http**S:**//zipkin.io/)
-- [Jaeger](http**S:**//www.jaegertracing.io/)
-- [Application Insights](http**S:**//docs.microsoft.com/en-us/azure/azure-monitor/app/distributed-tracing)
-- [AWS X-Ray](http**S:**//aws.amazon.com/xray/)
-- [Google Cloud Stackdriver Trace](http**S:**//cloud.google.com/trace)
+- [The Architecture of a Large-Scale Web Search Engine, circa 2019](https://www.0x65.dev/blog/2019-12-14/the-architecture-of-a-large-scale-web-search-engine-circa-2019.html)
+- [#kubecon EU schedule and the program chairs selected very few Istio and Knative related talks](https://twitter.com/mattklein123/status/1222740823843856384)
+- [Understanding Observability](https://sdarchitect.blog/2020/01/08/understanding-observability/)
+- [OpenTracing](https://opentracing.io/)
+- [OpenCensus](https://opencensus.io/)
+- [OpenTelemetry](https://opentelemetry.io/)
+- [Dapper, a Large-Scale Distributed Systems Tracing Infrastructure](https://research.google/pubs/pub36356/)
+- [Zipkin](https://zipkin.io/)
+- [Jaeger](https://www.jaegertracing.io/)
+- [Application Insights](https://docs.microsoft.com/en-us/azure/azure-monitor/app/distributed-tracing)
+- [AWS X-Ray](https://aws.amazon.com/xray/)
+- [Google Cloud Stackdriver Trace](https://cloud.google.com/trace)
 
 ### Transkrypcja
 
