--- a/_posts/2020-02-14-22.md
+++ b/_posts/2020-02-14-22.md
@@ -3,7 +3,7 @@ layout: post
 title: '#22 Observability - Distributed tracing'
 date: 2020-02-14 08:00:00 +0200
 description: Distributed tracing, czyli jeden z trzech filar observability
-img: 22.png
+img: "22"
 tags:
 spreaker: 22745792
 ---
