--- a/_posts/2020-01-31-21.md
+++ b/_posts/2020-01-31-21.md
@@ -3,7 +3,7 @@ layout: post
 title: '#21 Observability - Metryki'
 date: 2020-01-31 08:00:00 +0200
 description: Metryki, czyli miejsce w observability do proaktywnego monitoringu oraz alertów
-img: 21.png
+img: "21"
 tags: 
 spreaker: 22582755
 ---
