--- a/_posts/2020-04-10-26.md
+++ b/_posts/2020-04-10-26.md
@@ -17,7 +17,7 @@ Marka można znaleźć na jego [blogu](https://grabarz.pl), [LinkedIn](https://w
 
 Ciekawe linki i inne znaleziska z tego odcinka:
 
-- [A Deep Dive into Database Attacks [Part III]: Why Scarlett Johansson’s Picture Got My Postgres Database to Start Mining Monero](https://www.imperva.com/blog/deep-dive-database-attacks-scarlett-johanssons-picture-used-for-crypto-mining-on-postgre-database/)
+- [A Deep Dive into Database Attacks (Part III): Why Scarlett Johansson’s Picture Got My Postgres Database to Start Mining Monero](https://www.imperva.com/blog/deep-dive-database-attacks-scarlett-johanssons-picture-used-for-crypto-mining-on-postgre-database/)
 - [DNS Exfiltration tool for stealthily sending files over DNS requests.](https://github.com/m57/dnsteal)
 - [Controlling outbound traffic from Kubernetes](https://monzo.com/blog/controlling-outbound-traffic-from-kubernetes)
 - [Draft oauth v2.1](https://tools.ietf.org/html/draft-parecki-oauth-v2-1-01)
