26 - Komentarz Tomka z Twitter

--- a/_posts/2020-04-10-26.md
+++ b/_posts/2020-04-10-26.md
@@ -29,4 +29,8 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 - [Proof Key for Code Exchange by OAuth Public Clients](https://tools.ietf.org/html/rfc7636)
 - [JSON Web Token (JWT)](https://tools.ietf.org/html/rfc7519)
 
+### Komentarz [Tomka Onyszko](https://twitter.com/tonyszko) do odcinka :-)
+
+<iframe type="text/html" width="100%" height="500" frameborder="0" allowfullscreen style="max-width:100%" src="https://threadreaderapp.com/embed/1249043588727668736.html"></iframe>
+
 ### Transkrypcja wkrótce
