--- a/_posts/2019-08-30-3.md
+++ b/_posts/2019-08-30-3.md
@@ -3,7 +3,7 @@ layout: post
 title: '#3 Kubernetes (chyba?) dla architektów'
 date: 2019-08-30 08:00:00 +0200
 description: 
-img: 3.png
+img: "03"
 tags: 
 spreaker: 22177745
 ---
