--- a/_posts/2019-09-13-5.md
+++ b/_posts/2019-09-13-5.md
@@ -3,7 +3,7 @@ layout: post
 title: '#5 Technology Radar Review, część 2'
 date: 2019-09-06 08:00:00 +0200
 description: 
-img: 5.png
+img: "05
 tags: 
 spreaker: 22582602
 ---
