--- a/_posts/2019-09-27-7.md
+++ b/_posts/2019-09-27-7.md
@@ -3,7 +3,7 @@ layout: post
 title: '#7 Azure Storage - Blob po raz pierwszy'
 date: 2019-09-27 08:00:00 +0200
 description: 
-img: 7.png
+img: "07"
 tags: 
 spreaker: 22177702
 ---
