--- a/_posts/2019-10-04-8.md
+++ b/_posts/2019-10-04-8.md
@@ -3,7 +3,7 @@ layout: post
 title: '#8 f**k-upy, nasze i innych'
 date: 2019-10-04 08:00:00 +0200
 description: 
-img: 8.png
+img: "08"
 tags: 
 spreaker: 22582601
 ---
