--- a/_posts/2019-11-08-13.md
+++ b/_posts/2019-11-08-13.md
@@ -3,7 +3,7 @@ layout: post
 title: '#13 ADR, czyli Architecture Decision Record'
 date: 2019-11-01 08:00:00 +0200
 description: 
-img: 13.png
+img: "13"
 tags: 
 spreaker: 22582598
 ---
