--- a/_posts/2019-12-13-16.md
+++ b/_posts/2019-12-13-16.md
@@ -3,7 +3,7 @@ layout: post
 title: '#16 Książki'
 date: 2019-12-14 08:00:00 +0200
 description: 
-img: 16.png
+img: "16"
 tags: 
 spreaker: 22582596
 ---
