--- a/_posts/2019-12-20-17.md
+++ b/_posts/2019-12-20-17.md
@@ -3,7 +3,7 @@ layout: post
 title: '#17 Bazy danych - bazy grafowe'
 date: 2019-12-20 08:00:00 +0200
 description: 
-img: 17.png
+img: "17"
 tags: 
 spreaker: 22177700
 ---
