--- a/_posts/2020-01-17-20.md
+++ b/_posts/2020-01-17-20.md
@@ -3,7 +3,7 @@ layout: post
 title: '#20 Observability - Logi'
 date: 2020-01-17 08:00:00 +0200
 description: 
-img: 20.png
+img: "20"
 tags: 
 spreaker: 22177734
 ---
