--- a/_posts/2019-08-23-2.md
+++ b/_posts/2019-08-23-2.md
@@ -3,7 +3,7 @@ layout: post
 title: '#2 Serverless'
 date: 2019-08-23 08:00:00 +0200
 description: 
-img: 2.png
+img: "02"
 tags: 
 spreaker: 22582603
 ---
