--- a/_posts/2019-09-06-4.md
+++ b/_posts/2019-09-06-4.md
@@ -3,7 +3,7 @@ layout: post
 title: '#4 Technology Radar Review, część 1'
 date: 2019-09-06 08:00:00 +0200
 description: 
-img: 4.png
+img: "04"
 tags: 
 spreaker: 22177704
 ---
