--- a/_posts/2019-09-20-6.md
+++ b/_posts/2019-09-20-6.md
@@ -3,7 +3,7 @@ layout: post
 title: '#6 Circuit breaker'
 date: 2019-09-20 08:00:00 +0200
 description: 
-img: 6.png
+img: "06"
 tags: 
 spreaker: 22177744
 ---
