--- a/_posts/2019-10-11-9.md
+++ b/_posts/2019-10-11-9.md
@@ -3,7 +3,7 @@ layout: post
 title: '#9 Azure Storage - Table'
 date: 2019-10-11 08:00:00 +0200
 description: 
-img: 9.png
+img: "09"
 tags: 
 spreaker: 22177743
 ---
