--- a/_posts/2019-10-18-10.md
+++ b/_posts/2019-10-18-10.md
@@ -3,7 +3,7 @@ layout: post
 title: '#10 Service Mesh dla architektów i CTO'
 date: 2019-10-18 08:00:00 +0200
 description: 
-img: 10.png
+img: "10"
 tags: 
 spreaker: 22582600
 ---
