--- a/_posts/2019-10-25-11.md
+++ b/_posts/2019-10-25-11.md
@@ -3,7 +3,7 @@ layout: post
 title: '#11 Azure Storage Queue i ostatni raz ogólnie o Azure Storage'
 date: 2019-10-25 08:00:00 +0200
 description: 
-img: 11.png
+img: "11"
 tags: 
 spreaker: 22582599
 ---
