--- a/_posts/2019-11-01-12.md
+++ b/_posts/2019-11-01-12.md
@@ -3,7 +3,7 @@ layout: post
 title: '#12 Bazy danych - key-value'
 date: 2019-11-01 08:00:00 +0200
 description: 
-img: 12.png
+img: "12"
 tags: 
 spreaker: 22177739
 ---
