--- a/_posts/2019-11-15-14.md
+++ b/_posts/2019-11-15-14.md
@@ -3,7 +3,7 @@ layout: post
 title: '#14 Trochę o narzędziach dla architekta'
 date: 2019-11-15 01:00:00 +0200
 description: 
-img: 14.png
+img: "14"
 tags: 
 spreaker: 22582597
 ---
