--- a/_posts/2019-12-06-15.md
+++ b/_posts/2019-12-06-15.md
@@ -3,7 +3,7 @@ layout: post
 title: '#15 Technology Radar vol. 21 Review'
 date: 2019-12-06 08:00:00 +0200
 description: 
-img: 15.png
+img: "15"
 tags:
 spreaker: 22177737
 ---
