--- a/_posts/2020-01-03-18.md
+++ b/_posts/2020-01-03-18.md
@@ -3,7 +3,7 @@ layout: post
 title: '#18 API Gateway'
 date: 2020-01-03 08:00:00 +0200
 description: 
-img: 18.png
+img: "18"
 tags: 
 spreaker: 22582595
 ---
