--- a/_posts/2020-01-11-19.md
+++ b/_posts/2020-01-11-19.md
@@ -3,7 +3,7 @@ layout: post
 title: '#19 API Gateway - BFF, API Aggregation, GraphQL'
 date: 2020-01-11 08:00:00 +0200
 description: 
-img: 19.png
+img: "19"
 tags: 
 spreaker: 22177736
 ---
