--- a/_posts/2019-08-13-1.md
+++ b/_posts/2019-08-13-1.md
@@ -22,7 +22,7 @@ Odcinek znajdziesz na:
 
 - [Apple Podcasts](https://podcasts.apple.com/pl/podcast/architektura-vs-agile/id1477067604?i=1000447247459&l=pl)
 - [Spotify](https://open.spotify.com/episode/6daeXbyjWuvl3oSFFhpcfE)
-- [YouTube](https://www.youtube.com/watch?v=nbgFZtk1v0Y)
+- [YouTube](https://www.youtube.com/watch?v=cYzTAFHtxg8)
 - [Pocket Casts](https://pca.st/16k1)
 - [Breaker](https://www.breaker.audio/patoarchitekci/e/50062544)
 - [Google Podcasts](https://podcasts.google.com/?feed=aHR0cHM6Ly9hbmNob3IuZm0vcy84NzIwMTBjL3BvZGNhc3QvcnNz&episode=YWRhZDY2ZjUtMjZjMC03MmFkLTlmYzYtMzhiNDJmMTczZjU0)
