--- a/_posts/2020-05-22-28.md
+++ b/_posts/2020-05-22-28.md
@@ -7,7 +7,7 @@ img: "28"
 tags:
 spreaker: 28035993
 ---
-Kolejny odcinek o mikroserwisach albo… …patologii w mikroserwisach? Teraz luźne gadki nad elementem o nazwie platforma, czyli tam, gdzie prawie wszyscy Kubernetes… Czy tak musi być? Niekoniecznie!
+Kolejny odcinek o mikroserwisach albo… …patologii w mikroserwisach? Teraz luźne gadki nad elementem o nazwie platforma, czyli tam, gdzie prawie wszyscy pchają Kubernetes… Czy tak musi być? Niekoniecznie!
 
 - [Facebook](https://www.facebook.com/patoarchitekci/)
 - [UserVoice](https://github.com/patoarchitekci/uservoice/issues)
