--- a/_posts/2020-05-22-28.md
+++ b/_posts/2020-05-22-28.md
@@ -2,7 +2,7 @@
 layout: post
 title: '#28 Patologie Mikroserwisów - Repozytoria'
 date: 2020-05-22 10:00:00 +0200
-description: ...luźne gadki nad elementem, przy którym w sumie mało co się dyskutuje, czyli repozytoria!
+description: ...luźną gadka na temat miejsca do odpalania mikroserwisów... Czy naprawdę musi to być Kubernetes⁉️
 img: "28"
 tags:
 spreaker: 28035993
