--- a/_posts/2020-05-22-28.md
+++ b/_posts/2020-05-22-28.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: '#28 Patologie Mikroserwisów - Repozytoria'
+title: '#28 Patologie Mikroserwisów - Platforma'
 date: 2020-05-22 10:00:00 +0200
 description: ...luźną gadka na temat miejsca do odpalania mikroserwisów... Czy naprawdę musi to być Kubernetes⁉️
 img: "28"
